NZ: ui(fix) - fixed gaps between elements on product page and conditional elements based on product availability

--- a/prestashop/src/themes/child_classic/assets/css/custom.css
+++ b/prestashop/src/themes/child_classic/assets/css/custom.css
@@ -525,7 +525,7 @@ pre{
 
 .product-quantity #quantity_wanted{
     border-radius: 2rem 0 0 2rem;
-    padding: 0 1.7rem;
+    padding: 0 1.4rem;
     background: #f1f1f1;
     width: 4rem;
 }
@@ -607,7 +607,7 @@ pre{
 }
 
 .spec-col .tab-content{
-    margin-left: -40rem;
+    margin-left: -43rem;
 }
 
 .products article .wishlist-button-add {
@@ -672,4 +672,27 @@ pre{
 .product-images>li.thumb-container>.thumb.selected, .product-images>li.thumb-container>.thumb:hover {
     border: #b13f87 3px solid;
     border-radius: 1rem;
+}
+
+.product-information .product-description{
+    font-size: 0.8rem;
+    color: #333f4f;
+}
+
+.product-container .product-additional-info{
+    letter-spacing: 0.02rem;
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+}
+
+.product-add-to-cart #product-availability{
+    margin-top: -1rem;
+    letter-spacing: 0.02rem;
+    font-size: 0.8rem;
+}
+
+.product-add-to-cart .product-minimal-quantity{
+    margin-bottom: 2rem;
+    letter-spacing: 0.02rem;
+    font-size: 0.8rem;
 }
